# cj8-repo

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  space.py  tox.ini  window.py
.github/workflows/: lint.yaml
cj8_submission/: table.py
src/: display.py  env.py  exceptions.py  keypress.py  level.py  main.py  player.py  ui.py  util.py  window.py  world.py
src/levels/: 00001.level  00002.level  00003.level  00004.level  00005.level  00006.level  00007.level  00008.level  00009.level  00010.level  00011.level  00012.level  00013.level
src/saves/: main.save
src/tests/: display-test.py  keypress_test.py  save.level  space-test.py  test1.level
tests/: display-test.py
tools/LevelCreator/: LevelCreator.py  ezTypes.py  save.level
