[tool.poetry]
name = "cj8-repo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
blessed = "^1.18.1"
rich = "^10.5.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
isort = "^5.9"
pre-commit = "^2.13.0"
flake8-annotations = "^2.0"
flake8-bandit = "^2.1"
flake8-docstrings = "^1.5"
flake8-isort = "^4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
